[project]
name = "SQLAlchemyStudy"
version = "0.0.1"
authors = [
    {name = "Matheus Lima Romaneli", email = "mlima1324@gmail.com"},
]
description = "SQLAlchemy exploration of usage"
readme = "README.md"
requires-python = ">=3.10"
dependencies=[
  "sqlalchemy"
]

[project.optional-dependencies]
dev = [
  "ruff==0.9.1",
  "mypy==1.14.1",
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/YSMART-Projects/SQLAlchemyStudy"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "FA102"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "D", "PLR2004"]

[tool.mypy]
exclude = ["build", "venv"]
strict = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report term --cov-report html"

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_also = [
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
]
# fail_under = 80
sort = "cover"

[tool.coverage.run]
omit=[
  "*/__main__.py",
  "*/__init__.py",
]
